--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     <meta name="HandheldFriendly" content="true"/>
     <meta name="apple-touch-fullscreen" content="yes"/>
     <script src="js/resetRem.js"></script>
-    <script>
-        var css;
-        css = '<'+'link '+'href='+"css/common.css?v"+Math.random()+' rel='+"stylesheet "+'type='+"text/css"+'>';
-        document.write(css);
-        css = '<'+'link '+'href='+"css/index.css?v"+Math.random()+' rel='+"stylesheet "+'type='+"text/css"+'>';
-        document.write(css);
-        css = '<'+'link '+'href='+"css/animate.css?v"+Math.random()+' rel='+"stylesheet "+'type='+"text/css"+'>';
-        document.write(css);
-        css = '<'+'link '+'href='+"css/ganimate.css?v"+Math.random()+' rel='+"stylesheet "+'type='+"text/css"+'>';
-        document.write(css);
-    </script>
+
+    <link href="css/common.css" rel="stylesheet" type="text/css">
+    <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link href="css/animate.css" rel="stylesheet" type="text/css">
+    <!--<script>-->
+        <!--var css;-->
+        <!--css = '<'+'link '+'href='+"css/common.css?v"+Math.random()+' rel='+"stylesheet "+'type='+"text/css"+'>';-->
+        <!--document.write(css);-->
+        <!--css = '<'+'link '+'href='+"css/index.css?v"+Math.random()+' rel='+"stylesheet "+'type='+"text/css"+'>';-->
+        <!--document.write(css);-->
+        <!--css = '<'+'link '+'href='+"css/animate.css?v"+Math.random()+' rel='+"stylesheet "+'type='+"text/css"+'>';-->
+        <!--document.write(css);-->
+        <!--css = '<'+'link '+'href='+"css/ganimate.css?v"+Math.random()+' rel='+"stylesheet "+'type='+"text/css"+'>';-->
+        <!--document.write(css);-->
+    <!--</script>-->
     <title>vue</title>
 </head>
 <body>
